<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg">

    <com.bosphere.fadingedgelayout.FadingEdgeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="-1dp"
        app:fel_edge="bottom"
        app:fel_size_bottom="100dp">

        <ImageView
            android:id="@+id/youtubeThumbnail"
            android:layout_width="match_parent"
            android:layout_height="231dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="thumbnail"
            android:scaleType="centerCrop"
            android:transitionName="backdrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/playView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="click_area" />

    </com.bosphere.fadingedgelayout.FadingEdgeLayout>

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_alignStart="@+id/card"
        android:layout_alignTop="@+id/card"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-55dp"
        android:contentDescription="Title"
        android:elevation="10dp"
        android:transitionName="poster"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/trailer_tag"
        android:drawableStart="@drawable/ic_baseline_play_arrow_24"
        android:fontFamily="@font/nunito"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/play_tag"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="-5dp"
        app:cardBackgroundColor="@color/cardBg"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/right_container"
                android:layout_width="195dp"
                android:layout_height="165dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:text="@string/title"
                    android:textColor="@color/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:transitionName="title" />

                <TextView
                    android:id="@+id/runTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:padding="5dp"
                    android:text="@string/runTime"
                    android:textSize="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:transitionName="rating">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="4"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/movieRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:text="@string/rating" />
                </LinearLayout>

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:padding="5dp"
                    android:text="@string/genre"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/movieOverview"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:layout_below="@+id/right_container"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/nunito"
                android:lineSpacingExtra="8sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/MovieOverview"
                android:textColor="@color/titleTextColor"
                android:transitionName="overview" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>